<resources>
    <string name="app_name">TapReact</string>
    <string name="highscores">Highscores</string>
    <string name="playgame">Play Game</string>
    <string name="credits">Credits</string>
    <string name="settings">Settings</string>
    <string name="instructions">Instructions</string>
    <string name="difficulty">Difficulty</string>
    <string name="color_change">Change Color Scheme</string>
    <string name="personal_stats">Statistics</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="nonmember">Not a member? Register now...</string>
</resources>
