<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/Option0Primary"
    tools:context="com.ciacavus.tapreact.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/layout_default_style">

        <Button
            android:id="@+id/playgame"
            android:text="@string/playgame"
            android:textColor="#E3F2FD"
            android:textSize="25sp"
            android:layout_width="250dp"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:background="@drawable/buttonshape"/>

        <Button
            android:id="@+id/instructions"
            android:text="@string/instructions"
            android:textColor="#E3F2FD"
            android:textSize="25sp"
            android:layout_width="250dp"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:background="@drawable/buttonshape"/>

        <Button
            android:id="@+id/settings"
            android:text="@string/settings"
            android:textColor="#E3F2FD"
            android:textSize="25sp"
            android:layout_width="250dp"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:background="@drawable/buttonshape"/>

        <Button
            android:id="@+id/highscore"
            android:text="@string/highscores"
            android:textColor="#E3F2FD"
            android:textSize="25sp"
            android:layout_width="250dp"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:background="@drawable/buttonshape"
            />

        <Button
            android:id="@+id/personal"
            android:text="@string/personal_stats"
            android:textColor="#E3F2FD"
            android:textSize="25sp"
            android:layout_width="250dp"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:background="@drawable/buttonshape"
            />

    </LinearLayout>
</LinearLayout>
